--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <header>
     <h1>Notes App</h1>
-    <div>
+    <div class="header-actions">
       <button class="add-note-btn" onclick="openNoteDialog()">+ Add Note</button>
       <button id="themeToggleBtn" class="theme-toggle-btn">🌙</button>
     </div>
@@ -47,4 +47,5 @@
     </div>
   </dialog>
 </body>
+
 </html>
